--- a/ProjectML/templates/evaluate.html
+++ b/ProjectML/templates/evaluate.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <title>Hello, world!</title>
+  <title>Classification</title>
   </head>
     <body>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -12,21 +12,58 @@
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+      <canvas id="myChart" aria-label="chart" role="img" width="900" height="500"></canvas>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
+      <script >
+          var metrics=[];
+          metrics.push({{a}});
+          metrics.push({{p}});
+          metrics.push({{r}});
+          metrics.push({{f1}});
+          metrics.push({{log_loss}})
+          var ctx=document.getElementById("myChart").getContext("2d");
+          var myChart=new Chart(ctx,{
 
-      
-    <div class="jumbotron">
-      <h1 class="display-4">Classification Evaluation Metrics</h1>
-      <h1><p>Accuracy:</p></h1>
-      <h3>{{a}}</h3>
-       <h1> <p>Precision:</p></h1>
-      <h3>{{p}}</h3>
-       <h1> <p>Recall:</p><h1>
-      <h3>{{r}}</h3>
-       <h1> <p>F1:</p></h1>
-      <h3>{{f1}}</h3>
-       <h1> <p>R2:</p></h1>
-      <h3>{{r2}}</h3>
-    </div>
+              type:"bar",
+              data:{
+                labels:["Accuracy","Precision","Recall","F1-Score","Log Loss"],
+                datasets:[
+                  {
+
+                    data:metrics,
+                    label:"Classification Metrics",
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.2)',
+                      'rgba(54, 162, 235, 0.2)',
+                      'rgba(255, 206, 86, 0.2)',
+                      'rgba(75, 192, 192, 0.2)',
+                      'rgba(153, 102, 255, 0.2)',
+                   ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                  ],
+                  borderWidth: 1
+                  },
+                ],
+              },
+
+              options: {
+                
+                responsive: false,
+                layout:{
+                  padding:{
+                    left:300,
+                  },
+                },
+            }
+
+          });
+      </script>
+
 
 
 
