--- a/ProjectML/templates/index.html
+++ b/ProjectML/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <title>Hello, world!</title>
+  <title>Evaluate Model</title>
   </head>
     <body>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -13,32 +13,16 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
-    
-
-    <div class="row align-items-center justify-content-center">
+      
     <div class="jumbotron">
-     <div class="text-center"> <h1 class="display-4">User Form</h1></div>
-    <h6> <center>Evaluate your Model</center></h6>
-      <br>
-
-
-      <form action="/classification" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
-          <label>Choose your Model</label>
-          <br>
-          <input type="file" name="modelname">
-        </div>
-        <div class="form-group">
-          <label>Choose your Testing Data</label>
-          <br>
-          <input type="file" name="test_data">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-
-
-
+       <div class="list-group">
+          <a href="/classification" class="list-group-item list-group-item-action">Classification</a>
+          <a href="/regression" class="list-group-item list-group-item-action">Regression</a>
+          <a href="/clustering" class="list-group-item list-group-item-action">Clustering</a>
+      </div>
     </div>
-  </div>
+
+
+
   </body>
 </html>
