--- a/ProjectML/templates/classification.html
+++ b/ProjectML/templates/classification.html
@@ -18,7 +18,7 @@
     <div class="row align-items-center justify-content-center">
     <div class="jumbotron">
      <div class="text-center"> <h1 class="display-4">User Form</h1></div>
-    <h6> <center>Evaluate your Model</center></h6>
+     <h6> Evaluate your Model</h6>
       <br>
 
 
