--- a/ProjectML/templates/evaluate_precision_recall_curve.html
+++ b/ProjectML/templates/evaluate_precision_recall_curve.html
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li>
-                <a href="#">Visualise Metrics</a>
+                <a href="/evaluate">Visualise Metrics</a>
                 </li>
                 <li>
                     <a href="/evaluate/auc">ROC-AUC Curve</a>
@@ -29,7 +29,7 @@
                     <a href="#">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="/evaluate/pr_curve">Precision vs Recall</a>
+                    <a href="#">Precision vs Recall</a>
                 </li>
                 
             </ul>
@@ -41,6 +41,7 @@
                     <div class="col-lg-12">
                       <div class="alert alert-light" role="alert">
                         <h3>Model Evaluation Results</h3>
+                        <h3>{{auc}}</h3>
                       </div>
                        
                     </div>
@@ -58,36 +59,25 @@
 
 
 
-      <canvas id="myChart" aria-label="chart" role="img" width="900" height="500"></canvas>
+      <canvas id="lineChart" aria-label="chart" role="img" width="900" height="500"></canvas>
       <script>
 
-            var metrics={{data}}
-            var ctx=document.getElementById("myChart").getContext("2d");
+            var metrics={{recall_curve|safe}}
+            var ctx=document.getElementById("lineChart").getContext("2d");
             var myChart=new Chart(ctx,{
 
-              type:"bar",
+              type:"line",
+              animation: true,
               data:{
-                labels:["Accuracy","Precision","Recall","F1-Score","Log Loss"],
+                labels:{{precision_curve|safe}},
                 datasets:[
                   {
 
                     data:metrics,
-                    label:"Classification Metrics",
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                   ],
-                  borderColor: [
-                      'rgba(255, 99, 132, 1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                  ],
-                  borderWidth: 1
+                    label:"Precision Recall Curve",
+                    fill:false,
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension:0.1
                   },
                 ],
               },
