--- a/ProjectML/templates/evaluate_auc.html
+++ b/ProjectML/templates/evaluate_auc.html
@@ -10,8 +10,6 @@
     <body>
   
       <div id="wrapper">
-
-        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -20,10 +18,10 @@
                     </a>
                 </li>
                 <li>
-                <a href="/evaluate">Visualise Metrics</a>
+                <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
                 </li>
                 <li>
-                    <a href="/evaluate/auc">ROC-AUC Curve</a>
+                    <a href="/evaluate/{{id}}/auc">ROC-AUC Curve</a>
                 </li>
                 <li>
                     <a href="#">Feature Importance</a>
