--- a/ProjectML/templates/classification.html
+++ b/ProjectML/templates/classification.html
@@ -22,7 +22,7 @@
       <br>
 
 
-      <form action="/evaluate" method="POST" enctype="multipart/form-data">
+      <form action="/classification" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label>Name of Evaluation instance:</label>
           <br>
