--- a/ProjectML/templates/index.html
+++ b/ProjectML/templates/index.html
@@ -16,12 +16,10 @@
 
     <div class="jumbotron">
        <div class="list-group">
-          <a href="/classificationlist" class="list-group-item list-group-item-action">Classification</a>
-          <a href="/regressionlist" class="list-group-item list-group-item-action">Regression</a>
-          <a href="/clusteringlist" class="list-group-item list-group-item-action">Clustering</a>
+          <h1 class="text-center">Wecome!!</h1>
       </div>
       <div class="form-group">
-        <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
+        <a class="text-center" type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
       </div>
     </div>
 
