--- a/ProjectML/templates/evalform.html
+++ b/ProjectML/templates/evalform.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <title>All evaluations</title>
+  <title>Add Evaluation</title>
   </head>
     <body>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -14,33 +14,51 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
 
+
+    <div class="row align-items-center justify-content-center">
     <div class="jumbotron">
-      <h1 class="display-4">List of Evaluations</h1>
-      <table border=1>
-        <tr>
-          <th>Evaluation_id</th>
-          <th>Name</th>
-          <th>Model type</th>
-          <th>Metadata</th>
-          <th>Model path</th>
-          <th>Dataset path</th>
-        </tr>
-        {% for evaluation in entities %}
-          <tr>
-            <td>{{evaluation.eval_id}}</td>
-            <td>{{evaluation.name}}</td>
-            <td>{{evaluation.model_type}}</td>
-            <td>{{evaluation.metadata}}</td>
-            <td>{{evaluation.model_path}}</td>
-            <td>{{evaluation.dataset_path}}</td>
-            <td><a href="/evaluate/regression/{{evaluation.eval_id}}">Get Metrics</a></td>
-          </tr>
-        {% endfor %}
-      </table>
-      <a class="btn btn-primary btn-lg" href="/regression" role="button">Add an instance</a>
+     <div class="text-center"> <h1 class="display-4">Add Evaluation</h1></div>
+     <div class="text-center"> <h2 class="display-4">User form</h2></div>
+     <h6> Evaluate your Model</h6>
+      <br>
+
+
+      <form action="/neweval" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+          <label>Name of Evaluation instance:</label>
+          <br>
+          <input type="text" name="name">
+        </div>
+
+        <div class="form-group">
+          <label>Model Type:</label>
+          <br>
+          <select name="model_type">
+            <option value="regression">Regression</option>
+            <option value="classification">Classification</option>
+            <option value="clustering">Clustering</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label>Enter model path:</label>
+          <br>
+          <input type="text" name="model_path">
+        </div>
+
+        <div class="form-group">
+          <label>Enter dataset path:</label>
+          <br>
+          <input type="text" name="dataset_path">
+        </div>
+        <button type="submit" class="btn btn-primary">
+            Submit
+        </button>
+      </form>
+
+
+
     </div>
-
-
-
+  </div>
   </body>
 </html>
