--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>Regression</title>
+    <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}">
+
+    </script>
+  <title>Confusion matrix</title>
   </head>
     <body>
 
@@ -32,7 +35,7 @@
                     <a href="/evaluate/pr_curve">Precision vs Recall</a>
                 </li>
                 <li>
-                    <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
+                    <a href="#">Confusion Matrix</a>
                 </li>
 
             </ul>
@@ -58,63 +61,24 @@
 
 
 
-      <canvas id="myChart" aria-label="chart" role="img" width="800" height="400"></canvas>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
+      <div style="display:inline-block; float:left" id="container">
 
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
 
 
 
       <script >
-          var metrics=[];
-          metrics.push({{acc}});
-          metrics.push({{precision_score}});
-          metrics.push({{recall}});
-          metrics.push({{f1}});
-          metrics.push({{log_loss}});
-          var ctx=document.getElementById("myChart").getContext("2d");
-          var myChart=new Chart(ctx,{
+      var confusionMatrix = {{cmatrix}}
 
-              type:"bar",
-              data:{
-                labels:["Accuracy","Precision","Recall","F1 Score","Log Loss"],
-                datasets:[
-                  {
-
-                    data:metrics,
-                    label:"Classification Metrics",
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(140, 90, 255, 0.2)'
-                   ],
-                  borderColor: [
-                      'rgba(255, 99, 132, 1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(140, 90, 255, 1)'
-                  ],
-                  borderWidth: 1
-                  },
-                ],
-              },
-
-              options: {
-
-                responsive: false,
-                layout:{
-                  padding:{
-                    left:300,
-                  },
-                },
-            }
-
-          });
+        Matrix({
+          container : '#container',
+          data      : confusionMatrix,
+          start_color : '#ffffff',
+          end_color : '#e67e22'
+        });
       </script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
