--- a/ProjectML/templates/evaluate_precision_recall_curve.html
+++ b/ProjectML/templates/evaluate_precision_recall_curve.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
     <body>
-  
+
       <div id="wrapper">
 
         <!-- Sidebar -->
@@ -31,10 +31,13 @@
                 <li>
                     <a href="#">Precision vs Recall</a>
                 </li>
-                
+                <li>
+                    <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
+                </li>
+
             </ul>
         </div>
-  
+
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
@@ -43,17 +46,17 @@
                         <h3>Model Evaluation Results</h3>
                         <h3>{{auc}}</h3>
                       </div>
-                       
+
                     </div>
                 </div>
             </div>
         </div>
-       
+
 
     </div>
-   
-    
-  
+
+
+
 
 
 
@@ -94,7 +97,7 @@
 
           });
 
-          
+
 
        </script>
   </body>
