--- a/ProjectML/templates/evaluate_regression.html
+++ b/ProjectML/templates/evaluate_regression.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <title>Regression</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
     <body>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -12,6 +13,43 @@
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
+      <div id="wrapper">
+
+       <!-- Sidebar -->
+         <div id="sidebar-wrapper">
+             <ul class="sidebar-nav">
+                 <li class="sidebar-brand">
+                     <a href="#">
+                         Model Evaluation
+                     </a>
+                 </li>
+                 <li>
+                 <a href="#">Visualise Metrics</a>
+                 </li>
+                 <li>
+                     <a href="#">Feature Importance</a>
+                 </li>
+
+             </ul>
+         </div>
+
+         <div id="page-content-wrapper">
+             <div class="container-fluid">
+                 <div class="row">
+                     <div class="col-lg-12">
+                       <div class="alert alert-light" role="alert">
+                         <h3>Model Evaluation Results</h3>
+                       </div>
+
+                     </div>
+                 </div>
+             </div>
+         </div>
+
+
+      </div>
+
       <canvas id="myChart" aria-label="chart" role="img" width="900" height="500"></canvas>
       <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
       <script >
