--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -48,7 +48,45 @@
                       <div class="alert alert-light" role="alert">
                         <h3>Model Evaluation Results</h3>
                       </div>
+                      <div class="container">
+                        <!-- Tab links -->
+                        <div class="tab">
+                          <button class="tablinks" onclick="ChangeTab(event, 'Details')">Details</button>
+                          <button class="tablinks" onclick="ChangeTab(event, 'Tags')">Tags</button>
+                        </div>
 
+                        <!-- Tab content -->
+                        <div id="Details" class="tabcontent">
+                          <div class="container-fluid">
+                            <div class="row">
+                              <div class="col">
+                                <p><strong>Name: </strong>{{name}}</p>
+                              </div>
+                              <div class="col">
+                                <p><strong>Model Type: </strong>{{model_type}}</p>
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col">
+                                <p><strong>Status: </strong></p>
+                              </div>
+                              <div class="col">
+                                <p><strong>Date Created: </strong></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div id="Tags" class="tabcontent">
+                          <p>Tags related to this evaluation</p>
+                          <ul>
+                            <li>Tag1</li>
+                            <li>Tag2</li>
+                            <li>Tag3</li>
+                            <li>Tag4</li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -64,6 +102,12 @@
       <div style="display:inline-block; float:left" id="container">
 
       </div>
+      <br>
+      <div class="text-center">
+        <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
+      </div>
+      <br>
+      <br>
       <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
@@ -79,6 +123,27 @@
           start_color : '#ffffff',
           end_color : '#e67e22'
         });
+
+        function ChangeTab(evt, _id) {
+            // Declare all variables
+            var i, tabcontent, tablinks;
+
+            // Get all elements with class="tabcontent" and hide them
+            tabcontent = document.getElementsByClassName("tabcontent");
+            for (i = 0; i < tabcontent.length; i++) {
+              tabcontent[i].style.display = "none";
+            }
+
+            // Get all elements with class="tablinks" and remove the class "active"
+            tablinks = document.getElementsByClassName("tablinks");
+            for (i = 0; i < tablinks.length; i++) {
+              tablinks[i].className = tablinks[i].className.replace(" active", "");
+            }
+
+            // Show the current tab, and add an "active" class to the button that opened the tab
+            document.getElementById(_id).style.display = "block";
+            evt.currentTarget.className += " active";
+        }
       </script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
