--- a/ProjectML/templates/index.html
+++ b/ProjectML/templates/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <title>Evaluate Model</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
     <body>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -18,8 +19,8 @@
        <div class="list-group">
           <h1 class="text-center">Wecome!!</h1>
       </div>
-      <div class="form-group">
-        <a class="text-center" type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
+      <div class="text-center">
+        <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
       </div>
     </div>
 
