Added precision recall curve

--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li>
-                <a href="#">Visualise Metrics</a>
+                <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
@@ -32,7 +32,7 @@
                     <a href="#">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="/evaluate/pr_curve">Precision vs Recall</a>
+                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
                 </li>
                 <li>
                     <a href="#">Confusion Matrix</a>
