--- a/ProjectML/templates/evaluate.html
+++ b/ProjectML/templates/evaluate.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Classification</title>
   </head>
     <body>
-  
+
       <div id="wrapper">
 
         <!-- Sidebar -->
@@ -31,10 +32,10 @@
                 <li>
                     <a href="/evaluate/pr_curve">Precision vs Recall</a>
                 </li>
-                
+
             </ul>
         </div>
-  
+
         <div id="page-content-wrapper">
             <div class="container-fluid">
                 <div class="row">
@@ -42,17 +43,17 @@
                       <div class="alert alert-light" role="alert">
                         <h3>Model Evaluation Results</h3>
                       </div>
-                       
+
                     </div>
                 </div>
             </div>
         </div>
-       
+
 
     </div>
-   
-    
-  
+
+
+
 
 
 
@@ -104,7 +105,7 @@
 
           });
 
-          
+
 
        </script>
   </body>
