--- a/ProjectML/templates/evaluate_auc.html
+++ b/ProjectML/templates/evaluate_auc.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <title>Classification</title>
   </head>
     <body>
 
@@ -21,13 +22,13 @@
                 <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
                 </li>
                 <li>
-                    <a href="/evaluate/{{id}}/auc">ROC-AUC Curve</a>
+                    <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
                 </li>
                 <li>
                     <a href="#">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="/evaluate/pr_curve">Precision vs Recall</a>
+                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
@@ -42,16 +43,15 @@
                     <div class="col-lg-12">
                       <div class="alert alert-light" role="alert">
                         <h3>Model Evaluation Results</h3>
-                        <h3>{{auc}}</h3>
+
                       </div>
                       <div class="container">
                         <!-- Tab links -->
                         <div class="tab">
                           <button class="tablinks" onclick="ChangeTab(event, 'Details')">Details</button>
                           <button class="tablinks" onclick="ChangeTab(event, 'Tags')">Tags</button>
+                          <button class="tablinks" onclick="ChangeTab(event, 'auc')">Area under curve</button>
                         </div>
-
-                        <!-- Tab content -->
                         <div id="Details" class="tabcontent">
                           <div class="container-fluid">
                             <div class="row">
@@ -81,6 +81,11 @@
                             <li>Tag3</li>
                             <li>Tag4</li>
                           </ul>
+                        </div>
+
+                        <div id="auc" class="tabcontent">
+                          <strong>Area under curve:</strong>
+                          {{auc}}
                         </div>
                       </div>
                     </div>
@@ -119,7 +124,7 @@
                   {
 
                     data:metrics,
-                    label:"ROC-AUC Curve",
+                    label:"ROC Curve",
                     fill:false,
                     borderColor: 'rgb(75, 192, 192)',
                     tension:0.1
