--- a/ProjectML/templates/evaluate_classification.html
+++ b/ProjectML/templates/evaluate_classification.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>Regression</title>
+  <title>Classification</title>
   </head>
     <body>
 
@@ -29,7 +29,7 @@
                     <a href="#">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="/evaluate/pr_curve">Precision vs Recall</a>
+                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
