--- a/ProjectML/templates/evaluate_precision_recall_curve.html
+++ b/ProjectML/templates/evaluate_precision_recall_curve.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>Classification</title>
   </head>
     <body>
 
       <div id="wrapper">
-
-        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -20,16 +19,16 @@
                     </a>
                 </li>
                 <li>
-                <a href="/evaluate">Visualise Metrics</a>
+                <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
                 </li>
                 <li>
-                    <a href="/evaluate/auc">ROC-AUC Curve</a>
+                    <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
                 </li>
                 <li>
                     <a href="#">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="#">Precision vs Recall</a>
+                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
@@ -44,16 +43,14 @@
                     <div class="col-lg-12">
                       <div class="alert alert-light" role="alert">
                         <h3>Model Evaluation Results</h3>
-                        <h3>{{auc}}</h3>
+
                       </div>
                       <div class="container">
-                        <!-- Tab links -->
                         <div class="tab">
                           <button class="tablinks" onclick="ChangeTab(event, 'Details')">Details</button>
                           <button class="tablinks" onclick="ChangeTab(event, 'Tags')">Tags</button>
+                          <button class="tablinks" onclick="ChangeTab(event, 'auc')">Area under curve</button>
                         </div>
-
-                        <!-- Tab content -->
                         <div id="Details" class="tabcontent">
                           <div class="container-fluid">
                             <div class="row">
@@ -83,6 +80,11 @@
                             <li>Tag3</li>
                             <li>Tag4</li>
                           </ul>
+                        </div>
+
+                        <div id="auc" class="tabcontent">
+                          <strong>Area under curve:</strong>
+                          {{precision_recall_auc}}
                         </div>
                       </div>
                     </div>
@@ -140,6 +142,7 @@
             }
 
           });
+
           function ChangeTab(evt, _id) {
               // Declare all variables
               var i, tabcontent, tablinks;
@@ -160,7 +163,6 @@
               document.getElementById(_id).style.display = "block";
               evt.currentTarget.className += " active";
           }
-
 
        </script>
   </body>
