--- a/ProjectML/templates/evaluate_auc.html
+++ b/ProjectML/templates/evaluate_auc.html
@@ -15,7 +15,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Model Evaluation
+                        Model Evaluation Results
                     </a>
                 </li>
                 <li>
@@ -42,8 +42,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                       <div class="alert alert-light" role="alert">
-                        <h3>Model Evaluation Results</h3>
-
                       </div>
                       <div class="container">
                         <!-- Tab links -->
