--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -19,7 +19,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Model Evaluation
+                        Model Evaluation Results
                     </a>
                 </li>
                 <li>
@@ -46,7 +46,6 @@
                 <div class="row">
                     <div class="col-lg-12">
                       <div class="alert alert-light" role="alert">
-                        <h3>Model Evaluation Results</h3>
                       </div>
                       <div class="container">
                         <!-- Tab links -->
