--- a/ProjectML/templates/evaluate_regression.html
+++ b/ProjectML/templates/evaluate_regression.html
@@ -21,7 +21,7 @@
              <ul class="sidebar-nav">
                  <li class="sidebar-brand">
                      <a href="#">
-                         Model Evaluation
+                         Model Evaluation Results
                      </a>
                  </li>
                  <li>
@@ -39,7 +39,6 @@
                  <div class="row">
                      <div class="col-lg-12">
                        <div class="alert alert-light" role="alert">
-                         <h3>Model Evaluation Results</h3>
                        </div>
                        <div class="container">
                          <!-- Tab links -->
