feature imp, timestamp, cleanup

--- a/ProjectML/templates/evaluate_precision_recall_curve.html
+++ b/ProjectML/templates/evaluate_precision_recall_curve.html
@@ -25,10 +25,10 @@
                     <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
                 </li>
                 <li>
-                    <a href="#">Feature Importance</a>
+                    <a href="/evaluate/{{id}}/featimp">Feature Importance</a>
                 </li>
                 <li>
-                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
+                    <a href="#">Precision vs Recall</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
@@ -64,7 +64,7 @@
                                 <p><strong>Status: </strong></p>
                               </div>
                               <div class="col">
-                                <p><strong>Date Created: </strong></p>
+                                <p><strong>Date Created: </strong>{{timestamp}}</p>
                               </div>
                             </div>
                           </div>
