--- a/ProjectML/templates/evaluate_auc.html
+++ b/ProjectML/templates/evaluate_auc.html
@@ -22,10 +22,10 @@
                 <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
                 </li>
                 <li>
-                    <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
+                    <a href="#">ROC-AUC Curve</a>
                 </li>
                 <li>
-                    <a href="#">Feature Importance</a>
+                    <a href="/evaluate/{{id}}/featimp">Feature Importance</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
@@ -65,7 +65,7 @@
                                 <p><strong>Status: </strong></p>
                               </div>
                               <div class="col">
-                                <p><strong>Date Created: </strong></p>
+                                <p><strong>Date Created: </strong>{{timestamp}}</p>
                               </div>
                             </div>
                           </div>
