--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -29,7 +29,7 @@
                     <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
                 </li>
                 <li>
-                    <a href="#">Feature Importance</a>
+                    <a href="/evaluate/{{id}}/featimp">Feature Importance</a>
                 </li>
                 <li>
                     <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
@@ -70,7 +70,7 @@
                                 <p><strong>Status: </strong></p>
                               </div>
                               <div class="col">
-                                <p><strong>Date Created: </strong></p>
+                                <p><strong>Date Created: </strong>{{timestamp}}</p>
                               </div>
                             </div>
                           </div>
