--- a/ProjectML/templates/feature_importance.html
+++ b/ProjectML/templates/feature_importance.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-  <title>Classification</title>
+  <title>Feature Importance</title>
   </head>
     <body>
 
@@ -19,21 +19,30 @@
                         Model Evaluation Results
                     </a>
                 </li>
-                <li>
-                <a href="#">Visualise Metrics</a>
-                </li>
-                <li>
-                    <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
-                </li>
-                <li>
-                    <a href="/evaluate/{{id}}/featimp">Feature Importance</a>
-                </li>
-                <li>
-                    <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
-                </li>
-                <li>
-                    <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
-                </li>
+                {% if model_type == "classification" %}
+                  <li>
+                  <a href="/evaluate/classification/{{id}}">Visualise Metrics</a>
+                  </li>
+                  <li>
+                      <a href="/evaluate/classification/{{id}}/auc">ROC-AUC Curve</a>
+                  </li>
+                  <li>
+                      <a href="#">Feature Importance</a>
+                  </li>
+                  <li>
+                      <a href="/evaluate/classification/{{id}}/prc">Precision vs Recall</a>
+                  </li>
+                  <li>
+                      <a href="/evaluate/classification/{{id}}/cmatrix">Confusion Matrix</a>
+                  </li>
+                {% else %}
+                  <li>
+                  <a href="/evaluate/regression/{{id}}">Visualise Metrics</a>
+                  </li>
+                  <li>
+                      <a href="#">Feature Importance</a>
+                  </li>
+                {% endif %}
 
             </ul>
         </div>
@@ -90,31 +99,17 @@
   <table class="table table-bordered" style="width: 300px;margin-right:100px;margin-top:20px" align="right">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Metrcics</th>
-      <th scope="col">Score</th>
+      <th scope="col">Feature</th>
+      <th scope="col">Feature Score</th>
     </tr>
   </thead>
   <tbody>
+    {% for i in range(0, columns|length-1) %}
     <tr>
-      <th scope="row">Accuracy</th>
-      <td >{{'%0.2f'| format(acc|float)}}</td>
+      <th scope="row">{{columns[i]}}</th>
+      <td >{{'%0.2f'| format(feature_scores[i]|float)}}</td>
     </tr>
-    <tr>
-      <th scope="row">Precision</th>
-      <td>{{'%0.2f'| format(precision_score|float)}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Recall</th>
-      <td>{{'%0.2f'| format(recall|float)}}</td>
-    </tr>
-    <tr>
-      <th scope="row">F1 Score</th>
-      <td>{{'%0.2f'| format(f1|float)}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Log Loss</th>
-      <td>{{'%0.2f'| format(log_loss|float)}}</td>
-    </tr>
+    {% endfor %}
   </tbody>
 </table>
 
@@ -133,55 +128,55 @@
 
 
       <script >
-          var metrics=[];
-          metrics.push({{acc}});
-          metrics.push({{precision_score}});
-          metrics.push({{recall}});
-          metrics.push({{f1}});
-          metrics.push({{log_loss}});
-          var ctx=document.getElementById("myChart").getContext("2d");
-          var myChart=new Chart(ctx,{
+      var metrics={{feature_scores|safe}};
+      // console.log(metrics);
+      var ctx=document.getElementById("myChart").getContext("2d");
+      var myChart=new Chart(ctx,{
 
-              type:"bar",
-              data:{
-                labels:["Accuracy","Precision","Recall","F1 Score","Log Loss"],
-                datasets:[
-                  {
+          type:"bar",
+          data:{
+            labels:{{columns|safe}},
+            datasets:[
+              {
 
-                    data:metrics,
-                    label:"Classification Metrics",
-                  backgroundColor: [
-                      'rgba(255, 99, 132, 0.2)',
-                      'rgba(54, 162, 235, 0.2)',
-                      'rgba(255, 206, 86, 0.2)',
-                      'rgba(75, 192, 192, 0.2)',
-                      'rgba(153, 102, 255, 0.2)',
-                      'rgba(140, 90, 255, 0.2)'
-                   ],
-                  borderColor: [
-                      'rgba(255, 99, 132, 1)',
-                      'rgba(54, 162, 235, 1)',
-                      'rgba(255, 206, 86, 1)',
-                      'rgba(75, 192, 192, 1)',
-                      'rgba(153, 102, 255, 1)',
-                      'rgba(140, 90, 255, 1)'
-                  ],
-                  borderWidth: 1
-                  },
-                ],
+                data:metrics,
+                label:"Classification Metrics",
+              backgroundColor: [
+                  'rgba(255, 99, 132, 0.2)',
+                  'rgba(54, 162, 235, 0.2)',
+                  'rgba(255, 206, 86, 0.2)',
+                  'rgba(75, 192, 192, 0.2)',
+                  'rgba(153, 102, 255, 0.2)',
+                  'rgba(140, 90, 255, 0.2)',
+                  'rgba(140, 90, 255, 0.2)',
+                  'rgba(140, 90, 255, 0.2)'
+               ],
+              borderColor: [
+                  'rgba(255, 99, 132, 1)',
+                  'rgba(54, 162, 235, 1)',
+                  'rgba(255, 206, 86, 1)',
+                  'rgba(75, 192, 192, 1)',
+                  'rgba(153, 102, 255, 1)',
+                  'rgba(140, 90, 255, 1)',
+                  'rgba(140, 90, 255, 1)',
+                  'rgba(140, 90, 255, 1)',
+              ],
+              borderWidth: 1
               },
+            ],
+          },
 
-              options: {
+          options: {
 
-                responsive: false,
-                layout:{
-                  padding:{
-                    left:300,
-                  },
-                },
-            }
+            responsive: false,
+            layout:{
+              padding:{
+                left:300,
+              },
+            },
+        }
 
-          });
+      });
           function ChangeTab(evt, _id) {
               // Declare all variables
               var i, tabcontent, tablinks;
