fixed small bugs and updated cf matrix

--- a/ProjectML/templates/evaluate_auc.html
+++ b/ProjectML/templates/evaluate_auc.html
@@ -101,10 +101,10 @@
 
 
 
-      <canvas id="lineChart" aria-label="chart" role="img" width="900" height="500"></canvas>
+      <canvas id="lineChart" aria-label="chart" role="img" width="1000" height="400"></canvas>
       <br>
       <div class="text-center">
-        <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
+        <a type="button" style="margin-left:200px" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
       </div>
       <br>
       <br>
@@ -135,7 +135,7 @@
                 responsive: false,
                 layout:{
                   padding:{
-                    left:300,
+                    left:500,
                   },
                 },
             }
