--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}">
+    <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
-    </script>
+
   <title>Confusion matrix</title>
   </head>
     <body>
 
        <div id="wrapper">
 
-        <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
@@ -48,13 +49,12 @@
                       <div class="alert alert-light" role="alert">
                       </div>
                       <div class="container">
-                        <!-- Tab links -->
+
                         <div class="tab">
                           <button class="tablinks" onclick="ChangeTab(event, 'Details')">Details</button>
                           <button class="tablinks" onclick="ChangeTab(event, 'Tags')">Tags</button>
                         </div>
 
-                        <!-- Tab content -->
                         <div id="Details" class="tabcontent">
                           <div class="container-fluid">
                             <div class="row">
@@ -90,57 +90,62 @@
                 </div>
             </div>
         </div>
-
-
     </div>
-
-
-
-
 
       <div style="display:inline-block; float:left" id="container">
 
       </div>
-      <br>
-      <div class="text-center">
-        <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
-      </div>
-      <br>
-      <br>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.0/dist/chart.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+
+      <script>
+              var confusionMatrix =  {{cmatrix}}
+              var tp = confusionMatrix[0][0];
+              var fn = confusionMatrix[0][1];
+              var fp = confusionMatrix[1][0];
+              var tn = confusionMatrix[1][1];
+
+              var p = tp + fn;
+              var n = fp + tn;
+
+              var accuracy = (tp+tn)/(p+n);
+              var f1 = 2*tp/(2*tp+fp+fn);
+              var precision = tp/(tp+fp);
+              var recall = tp/(tp+fn);
+
+              accuracy = Math.round(accuracy * 100) / 100
+              f1 = Math.round(f1 * 100) / 100
+              precision = Math.round(precision * 100) / 100
+              recall = Math.round(recall * 100) / 100
+
+              var computedData = [];
+              computedData.push({"F1":f1, "PRECISION":precision,"RECALL":recall,"ACCURACY":accuracy});
+
+              var labels = ['Class A', 'Class B'];
+      		Matrix({
+      			container : '#container',
+      			data      : confusionMatrix,
+      			labels    : labels,
+                  start_color : '#ffffff',
+                  end_color : '#e67e22'
+      		});
 
 
-
-
-      <script >
-      var confusionMatrix = {{cmatrix}}
-
-        Matrix({
-          container : '#container',
-          data      : confusionMatrix,
-          start_color : '#ffffff',
-          end_color : '#e67e22'
-        });
-
+               var table = tabulate(computedData, ["F1", "PRECISION","RECALL","ACCURACY"]);
         function ChangeTab(evt, _id) {
-            // Declare all variables
+
             var i, tabcontent, tablinks;
 
-            // Get all elements with class="tabcontent" and hide them
+
             tabcontent = document.getElementsByClassName("tabcontent");
             for (i = 0; i < tabcontent.length; i++) {
               tabcontent[i].style.display = "none";
             }
 
-            // Get all elements with class="tablinks" and remove the class "active"
             tablinks = document.getElementsByClassName("tablinks");
             for (i = 0; i < tablinks.length; i++) {
               tablinks[i].className = tablinks[i].className.replace(" active", "");
             }
 
-            // Show the current tab, and add an "active" class to the button that opened the tab
-            document.getElementById(_id).style.display = "block";
+        document.getElementById(_id).style.display = "block";
             evt.currentTarget.className += " active";
         }
       </script>
@@ -149,7 +154,6 @@
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-
 
 
   </body>
