--- a/ProjectML/templates/feature_importance.html
+++ b/ProjectML/templates/feature_importance.html
@@ -104,7 +104,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for i in range(0, columns|length-1) %}
+    {% for i in range(0, columns|length) %}
     <tr>
       <th scope="row">{{columns[i]}}</th>
       <td >{{'%0.2f'| format(feature_scores[i]|float)}}</td>
@@ -142,24 +142,24 @@
                 data:metrics,
                 label:"Classification Metrics",
               backgroundColor: [
-                  'rgba(255, 99, 132, 0.2)',
-                  'rgba(54, 162, 235, 0.2)',
-                  'rgba(255, 206, 86, 0.2)',
-                  'rgba(75, 192, 192, 0.2)',
-                  'rgba(153, 102, 255, 0.2)',
-                  'rgba(140, 90, 255, 0.2)',
-                  'rgba(140, 90, 255, 0.2)',
-                  'rgba(140, 90, 255, 0.2)'
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)',
+                  'rgba(0, 0, 255, 0.5)'
                ],
               borderColor: [
-                  'rgba(255, 99, 132, 1)',
-                  'rgba(54, 162, 235, 1)',
-                  'rgba(255, 206, 86, 1)',
-                  'rgba(75, 192, 192, 1)',
-                  'rgba(153, 102, 255, 1)',
-                  'rgba(140, 90, 255, 1)',
-                  'rgba(140, 90, 255, 1)',
-                  'rgba(140, 90, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
+                  'rgba(0, 0, 255, 1)',
               ],
               borderWidth: 1
               },
