--- a/ProjectML/templates/evaluate_confusion_matrix.html
+++ b/ProjectML/templates/evaluate_confusion_matrix.html
@@ -98,9 +98,10 @@
 
 
 
-      <div style="display:inline-block; float:left" id="container">
+      <!-- <div style="display:inline-block; float:left" id="container">
 
-      </div>
+      </div> -->
+      {{cfm}}
       <br>
       <div class="text-center">
         <a type="button" class="btn btn-primary" name="list_of_all" href="/evaluatelist">List all evaluations</a>
